style.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}
* {
	box-sizing: border-box;
}




html {
	background: gainsboro;
	font-size: 36px;
	font-family: Arial, Helvetica, sans-serif;
}

body {
	display: flex;
	justify-content: center;
	align-items: center;
	height: 100vh;
}

#calculator {
	display: grid;
	max-width: 410px;
	width: 100%;
	grid: repeat(5, 1fr) / repeat(4, 1fr);
	gap: .5rem;
	padding: 0 .25rem 0 .25rem;
}

#answer-container {
	font-size: 45px;
	background-color: #26302D;
	padding: .5rem;
	width: 100%;
	height: 81px;
    grid-area: 1 / 1 / 1 / 5;
	color: white;
	border-radius: 12px;
	text-align: right;
}

button {
	height: 81px;
	padding: .5rem;
	color: #26302D;
	background-color: #C5C3C6;
	border-radius: 12px;
	font-size: inherit;
	border: 1px solid rgba(0, 0, 0, 0.05);
	font-family: inherit;
	cursor: pointer;
	box-shadow: 0 4px 1px -1px rgba(0, 0, 0, 0.25);
}

button:active {
	transition: .03s linear;
	transform: scale(.98);
	box-shadow: 0 1px 1px -1px rgba(0, 0, 0, 0.25);
}

button:focus {
	outline:none;
	border: 3px solid darkslategray;
}

::-moz-focus-inner {
	border:0;
}

.operator {
	color: white;
	background-color: #1985A1;
}


#enter-btn {
	grid-area: 6 / 1 / 6 / 5;
	background-color: #1F93C1;
	color: white;
}

